// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IT Solutions About Components matches the snapshot: 4innovation 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The CMS Innovation Center has a growing portfolio of models that test various payment and service delivery models and aim to achieve better care for patients, smarter spending, and healthier communities. The 4Innovation (4i) is a dynamic platform for CMS Innovation Center to onboard, support, and manage a variety of models and their participants to improve the quality of care and reduce service costs. The 4i platform is built using a modern scalable architecture, services, and solutions and operates in the CMS AWS Cloud enclave. The development strategy is based on a robust Human-Centered Design, User Experience Framework, and SAFe agile methodologies.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilties
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <str>
              Agreement management
            </str ong>
             - Create and manage ACO/Entity data, Change Request management, Sign and manage Participation Agreements and HIPAA Disclosure Forms to access sensitive data
          </li>
          <li>
            <strong>
              Participant Management
            </strong>
             - Add and manage participants, Real-time feedback on Participant Medicare enrollment checks for providers.
          </li>
          <li>
            <strong>
              Benefits Enhancements
            </strong>
             - Add and manage Benefit Enhancements and Payment mechanisms.
          </li>
          <li>
            <strong>
              Contact/User Management
            </strong>
             - Invitation-based access enables users to access the system and manage users in their Entities, elect a Designated Official (DO)
          </li>
          <li>
            <strong>
              Reports & Analytics
            </strong>
             - View and download real-time reports related to agreements, participants, users’ access, and change requests for APM Entities
          </li>
          <li>
            <strong>
              Data Hub & Data Exchange
            </strong>
             - Provide secure access to sensitive data such as claims and beneficiary reports,
          </li>
          <li>
            <strong>
              Knowledge Library
            </strong>
             - Publish and manage model and system content (FAQs/Documents/ Articles/ Events/Webinars)
          </li>
          <li>
            <strong>
              Provider Overlap Check
            </strong>
             - Allow entities to check the provider overlap within and across the models and resolve the overlap errors before submitting the records.
          </li>
          <li>
            <strong>
              Beneficiary Overlap Check
            </strong>
             - Beneficiary overlap check across the models
          </li>
          <li>
            <strong>
              Beneficiary Lookup Feature
            </strong>
             - This feature will show the beneficiary alignment to Medicare Shared Savings Program, KCC, ACO REACH, VTAPM, or PCF if the beneficiary is in one of the above programs.
          </li>
          <li>
            <strong>
              Data Exchange with downstream systems
            </strong>
             - Entity, Provider, and beneficiary data transmission for participating APMs to CMS systems like Shared Systems (FFS SSMs, MDM, IPC, and BCDA)
          </li>
          <li>
            <strong>
              Claim and Claim Line Feeds (CCLF)
            </strong>
             - CCLF are a package of 12 files containing claims and beneficiary data, sent monthly to entities participating in models under CM/CMMI
          </li>
          <li>
            <strong>
              Identity & Access Management
            </strong>
             - Multi-factor authentication with Okta, Remote identity proofing with Experian, seamless integration with CMS IDM and EUA
          </li>
          <li>
            <strong>
              Application Programming Interface (API) Key Mgt
            </strong>
             - Request and manage API keys and monitor API usage statistics
          </li>
          <li>
            <strong>
              4i Command Line Interface (CLI) Tool
            </strong>
             - Allows authorized entities to automate the downloading of their sensitive data through a lightweight client CLI Tool using public and private API keys without having to login to the 4i/DataHub UI to retrieve files and reports.
          </li>
          <li>
            <strong>
              Tasks and Notifications
            </strong>
             - Show users Tasks and Notifications, the ability for users to manage and control the notifications
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Accountable Care Organization - Operational System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Accountable Care Organization – Operational System (ACO-OS) is the system of record for 4 CMMI models (VT APM, ACO REACH, KCC, PCF) and the Medicare Shared Savings Program in CM. The system stores and exchanges ACO/entity demographic, provider, claim, and beneficiary data with ACOs/entities and CMS systems such as Master Data Management (MDM), Enterprise Data Lake (EDL), and Fee-for-Service (FFS) Shared System Maintainers (SSMs). The ACO-OS generates and shares the claims data each month for over 14,000,000 Medicare beneficiaries. The claims data and reports generated by ACO-OS are shared through the Data Hub feature in the 4i platform for CMMI models and ACO-Management System (ACO-MS) for Medicare Shared Savings Program.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilties
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <strong>
              Agreement management
            </strong>
             - Create and manage ACO/Entity data, Change Request management, Sign and manage Participation Agreements and HIPAA Disclosure Forms to access sensitive data
          </li>
          <li>
            <strong>
              Participant Management
            </strong>
             - Add and manage participants, Real-time feedback on Participant Medicare enrollment checks for providers.
          </li>
          <li>
            <strong>
              Benefits Enhancements
            </strong>
             - Add and manage Benefit Enhancements and Payment mechanisms.
          </li>
          <li>
            <strong>
              Contact/User Management
            </strong>
             - Invitation-based access enables users to access the system and manage users in their Entities, elect a Designated Official (DO)
          </li>
          <li>
            <strong>
              Reports & Analytics
            </strong>
             - View and download real-time reports related to agreements, participants, users’ access, and change requests for APM Entities
          </li>
          <li>
            <strong>
              Data Hub & Data Exchange
            </strong>
             - Provide secure access to sensitive data such as claims and beneficiary reports,
          </li>
          <li>
            <strong>
              Knowledge Library
            </strong>
             - Publish and manage model and system content (FAQs/Documents/ Articles/ Events/Webinars)
          </li>
          <li>
            <strong>
              Provider Overlap Check
            </strong>
             - Allow entities to check the provider overlap within and across the models and resolve the overlap errors before submitting the records.
          </li>
          <li>
            <strong>
              Beneficiary Overlap Check
            </strong>
             - Beneficiary overlap check across the models
          </li>
          <li>
            <strong>
              Beneficiary Lookup Feature
            </strong>
             - This feature will show the beneficiary alignment to Medicare Shared Savings Program, KCC, ACO REACH, VTAPM, or PCF if the beneficiary is in one of the above programs.
          </li>
          <li>
            <strong>
              Data Exchange with downstream systems
            </strong>
             - Entity, Provider, and beneficiary data transmission for participating APMs to CMS systems like Shared Systems (FFS SSMs, MDM, IPC, and BCDA)
          </li>
          <li>
            <strong>
              Claim and Claim Line Feeds (CCLF)
            </strong>
             - CCLF are a package of 12 files containing claims and beneficiary data, sent monthly to entities participating in models under CM/CMMI
          </li>
          <li>
            <strong>
              Identity & Access Management
            </strong>
             - Multi-factor authentication with Okta, Remote identity proofing with Experian, seamless integration with CMS IDM and EUA
          </li>
          <li>
            <strong>
              Application Programming Interface (API) Key Mgt
            </strong>
             - Request and manage API keys and monitor API usage statistics
          </li>
          <li>
            <strong>
              4i Command Line Interface (CLI) Tool
            </strong>
             - Allows authorized entities to automate the downloading of their sensitive data through a lightweight client CLI Tool using public and private API keys without having to login to the 4i/DataHub UI to retrieve files and reports.
          </li>
          <li>
            <strong>
              Tasks and Notifications
            </strong>
             - Show users Tasks and Notifications, the ability for users to manage and control the notifications
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Automated Plan Payment System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Automated Plan Payment System (APPS) calculates plan level monthly payment for Medicare Advantage, Program of All-Inclusive Care for the Elderly (PACE), Medicare- Medicaid Plans, section 1876 and 1833 cost-based Managed Care Organizations, Part D Prescription Drug Sponsors, and specific CMS Demonstration initiatives. APPS facilitates payments to the US Treasury via the Health Insurance General Ledger Accounting System (HIGLAS) in the Office of Financial Management (OFM). APPS stores plan company banking information so OFM and Treasury can disperse payments through Electronic Funds Transfer (EFT).
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Computes plan level monthly payments to Medicare Advantage, PACE Plans Medicare- Medicaid Plans, section 1876 and 1833 cost-based Managed Care Organizations, and Part D Prescription Drug Sponsors, and specific CMS Demonstration initiatives. APPS receives plan level specific from the Health Plan Management System (HPMS) and Medicare Advantage Prescription Drug System (MARx)
          </li>
          <li>
            Receives Annual Part D reconciliation and Coverage Gap Discount payments
          </li>
          <li>
            Produces a monthly file containing plan level payments for HIGLAS
          </li>
          <li>
            Computes and stores plan level sequestration payment adjustments amounts
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Beneficiary Claims Data API 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Beneficiary Claims Data API (BCDA) gives organizations the insights they need to provide high quality, coordinated care. BCDA uses the FHIR® standard as a simple, flexible, and effective way for Medicare Shared Savings Program, ACO REACH, and other Alternative Payment Model participants to receive Medicare Part A, B, and D claims.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li
            class="list-item"
          >
            BCDA supplements ACOs’ insight into their assigned beneficiary populations with Medicare claims data.
          </li>
          <li
            class="list-item"
          >
            BCDA enables ACOs to make claims data requests more often - once a week.
          </li>
          <li
            class="list-item"
          >
            BCDA offers Medicare claims data in a format that is aligned with a healthcare interoperability standard and the CMS interoperability rule.
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: CMS Box 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        CMS Box is a cloud content management tool that allows users to upload, download, edit, and share documents t​o one central place. Users can also ​access documents through the web or a mobile device without VPN and without compromising security. All CMS employees should have access by default. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: CMS Qualtrics 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        CMS Qualtrics is a self-service tool for model teams to capture information (like a survey or application). All CMS users should be able to sign into CMS Qualtrics using their CMS user name and password.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Customizable survey or application creation
          </li>
          <li>
            Survey or application distribution
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: CPI Vetting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        CPI Vetting is a process conducted by the Center for Program Integrity (CPI). Their mission is to detect and combat fraud, waste and abuse of the Medicare and Medicaid programs.

They make sure CMS is paying the right provider the right amount for services covered under their programs. They support proper enrollment and accurate billing practices by working with providers, states, and other stakeholders. They strive to protect patients while also minimizing unnecessary burden on providers.

CMMI works with CPI to screen participant and provider candidates prior to those candidates joining the model.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Centralized Data Exchange 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Enables CMMI-to-Participant Interoperability; and enables application integration with other CMS systems. The Centralized Data Exchange (CDX) serves as an IT capability that enables the Innovation Center (IC) models to send and receive data with internal and external model participants using Application Programming Interfaces (APIs). It provides an improved ability to send and receive ad hoc files with internal and external users that takes advantage of modern, cloud-based technologies with one, centralized file exchange.

CDX is to exchange files between authorized users. This is implemented through the concept of a shared drive where authorized users can upload files and give access to those files to other authorized users. All users have a Home folder containing a list of all the files and folders to which they have access. The home folder is the Users "default/root" folder and contains all the files and folders to which the current user has access.

The business function of CDX is a centralized data exchange to enable interoperability and provide center-wide data collection capabilities across CMMI. The exchange solution supports sending the right data, at the right time, sending the right amount, and referencing the right participants.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Onboard participants & vendors
          </li>
          <li>
            Tap into existing data feeds
          </li>
          <li>
            Provide center-wide data collect and use the data
          </li>
          <li>
            Enable interoperability
          </li>
          <li>
            Exchange data with Application Program Interfaces (APIs)
          </li>
          <li>
            Shared Drives for secure data exchange with PII/PHI
          </li>
          <li>
            Outside vendor API testing
          </li>
          <li>
            Collects data from HDR/ virus scans/ transforms templated into FHIR format
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Manage API keys and tokens
          </li>
          <li>
            Basic API functions (GET, POST, PUT, DELETE)
          </li>
          <li>
            For the ET3 model: A Simple Object Access Protocol (SOAP) API with EMS Vendors
          </li>
          <li>
            For other purposes: A REST API (representational state transfer)
          </li>
          <li>
            Transform data
          </li>
          <li>
            Exchange data with Fast Healthcare Interoperable Resource (FHIR) Azure Managed Service
          </li>
          <li>
            Exchange data with EMRs, Health Exchange Networks, etc.
          </li>
          <li>
            File handling (create folder, upload file, download file)
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Chronic Conditions Warehouse 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Chronic Conditions Data Warehouse (CCW) is a research database designed to make Medicare, Medicaid, Assessments, Part C, and Part D Prescription Drug Event data more readily available to support research designed to improve the quality of care and reduce costs and utilization.

This system is used by health services researchers studying ways to improve the quality and reduce the cost of care provided to chronically ill Medicare beneficiaries.

CCW data files may be requested for any predefined chronic condition cohorts, or users may request a customized cohort(s) specific to research focus areas.
      </p>
      <ul
        class="padding-left-4 margin-top-0"
      >
        <li
          class="list-item"
        >
          CMMI models and demonstrations use the CCW and the VRDC for data analysis, analytics, data mining, and data storage in a SAS environment
        </li>
        <li
          class="list-item"
        >
          Federal staff and CMMI contractors are allowed access to the CCW.
        </li>
        <li
          class="list-item"
        >
          Model participants have limited access to the VRDC to upload and download files.
        </li>
        <li
          class="list-item"
        >
          AHC, BPCI Advanced, CMS FFRDC Contract, Opioid (ViT) Demonstration, CPC+, PCF, DC, KCF, CKCC, IAH, CJR, CEC, ETC, NFI, MCCM, MDPP, IVIG Demonstration, NG ACO, HHVBP, FCHIP, InCK, IDOS Contractor, MOM, State Innovations (MD, PA, VT), ORES OTS Contractor, OCM, Quality Measures Contractor, RO, ET3
        </li>
      </ul>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <span
          class="text-pre-wrap "
        >
          CCW provides researchers with Medicare and Medicaid beneficiary, claims, and assessment data linked by beneficiary across the continuum of care. In the past, researchers analyzing data files had to perform extensive analysis related to beneficiary matching, deduplication, and merging of the files in preparation for their study analysis. With the CCW data, this preliminary linkage work is already accomplished and delivered as part of the data files sent to researchers.

Performing model implementation, design, monitoring, and evaluation activities that include: 
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            accessing CMS data
          </li>
          <li>
            exchanging files/data with model participants
          </li>
          <li>
            transferring data from the CCW to model operational systems within the CMS boundaries
          </li>
          <li>
            uploading model awardee-specific data collections into the VRDC
          </li>
          <li>
            sharing common files/data between projects
          </li>
          <li>
            sharing CMS and CMMI model data with external researchers
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Follow beneficiaries across multiple care settings
          </li>
          <li>
            Identify areas for improving quality of care provided to chronically ill Medicare beneficiaries.
          </li>
          <li>
            Identify ways to reduce program spending.
          </li>
          <li>
            Make current Medicare, Medicaid, Assessment and Part D data more readily available to researchers for all studies, populations, and rare events.
          </li>
          <li>
            Provide thorough documentation so researchers understand the common keys, relationships between claims types, and how to use data accurately.
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Consolidated Business Operations Support Center 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Consolidated Business Operations Support Center (CBOSC) contract provides IT and programmatic help desk inquiry support, help desk operations and Business Operations support for the Innovation Center Models, the Alternative Payment Model (APM) track of the Quality Payment Program (QPP) and CM. CBOSC manages intake, resolution and escalation of all inquiries related to Innovations and Shared Savings Program Business Operations centrally. Support is provided through Pre-Implementation, Post-Implementation, Operation, Reporting, and Information Support phases as models test innovative payment and service delivery models to reduce program expenditures while preserving or enhancing the quality of care furnished to individuals.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Electronic File Transfer 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Electronic File Transfer (EFT) is a secure file transfer protocol used to move files from one destination to another internally or externally.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Expanded Data Feedback Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Center For Medicare and Medicaid Innovation (CMMI) Expanded Data Feedback Reporting (eDFR) system will provide transparency to stakeholders including the primary care physicians participating in CMMI Alternative Payment Models (APM) in the form of feedback for healthcare being delivered from a utilization, cost, and quality perspective. The metrics will be calculated based on Medicare provider and claims data. The system will render the information visually on dashboards, and reports.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Receive data from CMMI (claims data, feedback reports)
          </li>
          <li>
            Produce Business Intelligence (BI) reports and dashboards for internal and external uers
          </li>
          <li>
            Complete data analytics to supply visibility into peformance against model’s objectives
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Provide up to date (quarterly) dashboards for model participants (practices and physicians)
          </li>
          <li>
            Each dashboard is specific to the exact practice, and will contain information about that practice’s patients.
          </li>
          <li>
            Dashboards are targeted at the Practice/Physician level, not at higher levels like hospital administrators or group administrators.
          </li>
          <li>
            Dashboards are not intended to be used by CMS or CMMI internally – they are for the participating practices.
          </li>
          <li>
            <span>
              Each dashboard will contain information that is sensitive to each practice, including:
            </span>
            <ul
              class="padding-left-4 margin-top-0"
            >
              <li
                class="list-item"
              >
                Payment metrics
              </li>
              <li
                class="list-item"
              >
                Patient quality metrics
              </li>
              <li
                class="list-item"
              >
                Locality metrics
              </li>
              <li
                class="list-item"
              >
                Model specific metrics
              </li>
            </ul>
          </li>
          <li>
            Each dashboard can contain information to help practices increase their rankings within a model as well as (potentially) patients well being – but... practices are not required to act on the data included in a dashboard. Dashboards are for informational purposes only.
          </li>
          <li>
            Provide CMMI internal model teams with intelligence on model participants
          </li>
          <li>
            Provide ET3 model with a tool for linking data attributes to patients through Probabilistic Matching
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: GovDelivery 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        GovDelivery is a listserv used to communicate with model participants and other interested stakeholders.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Reach subscribers by email
          </li>
          <li>
            Automate and schedule emails
          </li>
          <li>
            Utilize branded templates
          </li>
          <li>
            Access detailed reporting
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: GrantSolutions 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        GrantSolutions (GS) is a tool used to manage grants from funding opportunity planning, through the issuance of awards, to grant closeout.

CMS currently utilizes GrantSolutions primarily for awarding, managing, and closing out grants. For some grant programs, CMS utilizes the GS Application Review Module (ARM) for the required merit review of applications.

CMS also utilizes the GrantSolutions Recipient Insight (RI) tool which applies artificial intelligence, machine learning, and other emerging technologies to collect information from 750,000 organizations contained in seven different public databases. RI analyzes trends and identifies warning signs in the data. This data is presented through key data in actionable dashboards highlighting critical information for conducting risk assessment of applicants and recipients and identify reduce fraud, waste, and abuse.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Health Data Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Health Data Reporting (HDR) is a configurable, Innovation Center-wide solution that supports the collection and validation of health-related data for analysis by CMMI models. HDR is part of the Innovation Support Platform (ISP) Suite of tools that include Expanded Data Feedback Reporting (eDFR) for business analysis and Centralized Data Exchange (CDX) for data exchange within the Suite and across CMS.

HDR leverages CMS’ Enterprise Portal and CMMI’s IC Portlet Services for secure access and a standardized look and feel.

HDR’s Configuration Management allows model teams to define and modify performance and submission periods, change data elements to be collected across performance periods, and manage and monitor submissions.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4"
        >
          <li>
            A model’s participating entities submit model-specified data at specified times throughout the model’s life. Submitted data is validated, errors are reported back for correction, and submission statuses are reported within the UI for monitoring.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Data collection capabilities
        </h3>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Health data submissions via Microsoft Excel spreadsheets
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Health data submissions via Microsoft Excel spreadsheets
          </li>
          <li>
            Aggregate quality measure (i.e., numerators, denominators, exclusions, exceptions)
          </li>
          <li>
            All other types of health-related data (e.g., clinical data, health equity data, etc.)
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Health data submissions via UI
        </h4>
        <ul
          class="padding-left-4"
        >
          <li>
            Aggregate quality measures
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Model configuration
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Model configuration
          </li>
          <li>
            Basic configuration (field names aligned with AMS)
          </li>
          <li>
            Model year, performance periods, and submission periods configuration
          </li>
          <li>
            Quality measure with optional results display configuration
          </li>
          <li>
            Pre-loaded beneficiary information including minimum thresholds for reporting
          </li>
          <li>
            Two-tier data validation and status reporting leverages: 1) Microsoft Excel’s in-cell validations and 2) HDR’s backend services
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Quality measure results
        </h4>
        <ul
          class="padding-left-4"
        >
          <li>
            Aggregate quality measure calculation results report
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Health Plan Management System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Centers for Medicare & Medicaid Services' (CMS) Health Plan Management System (HPMS) is a web-enabled information system that serves a critical role in the ongoing operations of the Medicare Advantage (MA) and Part D programs.

HPMS is a full-service website where health and drug plans, plan consultants, third-party vendors, and pharmaceutical manufacturers can work with CMS to fulfill the plan enrollment and compliance requirements of the Medicare Advantage (MA) and Prescription Drug (Part D) programs.

Health Plan Management System, all health insurance companies participating in the MAPD program use this interface to communicate with CM for their contracting, actuarial, coverage, marketing, and enrollment in the MA and Part D programs.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <span
          class="text-pre-wrap "
        >
          HPMS services the MA and Part D programs in two ways:
        </span>
        <ol
          class="padding-left-4 margin-top-0"
        >
          <li>
            HPMS functionality facilitates the numerous data collection and reporting activities mandated for these entities by legislation.
          </li>
          <li>
            HPMS provides support for the ongoing operations of the plan enrollment and plan compliance business functions and for longer-term strategic planning and program analysis.
          </li>
        </ol>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <span
          class="text-pre-wrap "
        >
          HPMS supports the following business processes for all private health and drug plans participating in the MA and Part D programs:
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Contract and plan enumeration and management
          </li>
          <li>
            Application submission and review
          </li>
          <li>
            Formulary submission and review
          </li>
          <li>
            Bid and benefit package submission and review
          </li>
          <li>
            Electronic contracting and certifications
          </li>
          <li>
            Marketing material submission and review
          </li>
          <li>
            Audit and assessment of plan performance
          </li>
          <li>
            Plan payment reconciliation data reporting
          </li>
          <li>
            Part D drug pricing and pharmacy data submissions
          </li>
          <li>
            Fiscal soundness
          </li>
          <li>
            Complaint tracking
          </li>
          <li>
            Compliance
          </li>
          <li>
            Plan data reporting and performance metrics
          </li>
          <li>
            Financial, plan bid, and plan data reporting audits
          </li>
          <li>
            Coverage gap discount program
          </li>
          <li>
            Electronic health record reporting
          </li>
          <li>
            Cost reporting and audit
          </li>
          <li>
            Plan connectivity
          </li>
          <li>
            Operational data exchanges
          </li>
          <li>
            Online Enrollment Center (OEC) management
          </li>
          <li>
            Data support for the Medicare & You handbook and Medicare Plan Finder
          </li>
          <li>
            Quality improvement
          </li>
          <li>
            Research and evaluation
          </li>
          <li>
            Manage stakeholder contacts and organizations
          </li>
          <li>
            Track events (campaigns) and capture feedback (surveys)
          </li>
          <li>
            Measure event registration, attendance, and performance
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Healthcare Integrated General Ledger Accounting System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Healthcare Integrated General Ledger Accounting System (HIGLAS) is the single source of truth that centralizes and standardizes the federal financial accounting functions for all of CMS’s programs. All Medicare Fee For Service (FFS), Health Care Exchanges, Medicaid/CHIP/Grants, and Program Budget’s payments are accounted for and reported in HIGLAS.

Specific to CMMI, HIGLAS has two integrated points:
      </p>
      <ol
        class="padding-left-4 margin-top-0"
      >
        <li
          class="list-item"
        >
          CMMI uses an Innovation Payment Contractor (IPC) vendor – National Government Services (NGS) to make payments on many models such as QPP, CJR, MDPCP, CPC, etc. – all of the financial reporting and payment functions are in HIGLAS since Nov 2021.
        </li>
        <li
          class="list-item"
        >
          Other Models, such as BPCI (Bundled Payment), use the FFS claims system to forward the payment details to HIGLAS, and these payments are accounted for and made to awardees from HIGLAS.
        </li>
      </ol>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Strengthens Medicare’s management of accounts receivable and allows more timely and effective collection activities on outstanding debts
          </li>
          <li>
            Enhances CMS oversight of contractor financial operations, including data entry, transaction processing and reporting
          </li>
          <li>
            Produces automated agency financial statements and other required reports, leading to fewer errors in financial reporting and a reduction in manual labor
          </li>
          <li>
            Allows for the elimination of redundant accounting processes and provides standardized accounting business practices
          </li>
          <li>
            Enables Medicare contractors to cut back on the number of cuff systems currently used to track financial data
          </li>
          <li>
            Provides a standard General Ledger accounting system, standardized accounting and financial management process for CMS central office and administrative program accounting activities
          </li>
          <li>
            Incorporates Medicaid and CHIP government data
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Innovation Payment Contractor 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Innovation Payment Contractor (IPC) assists CMMI in making payments to eligible participants in multiple tests of Models of care and program innovations to improve quality and value-based care.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Financial services conducted for CMMI Models
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Process payments for Models and disburse Electronic Funds Transfer (EFT) or paper check payments, as required, to eligible Medicare, Non-Medicare, and Medicaid providers, Model participants, and beneficiaries.
          </li>
          <li>
            Apply Federal Payment Levy Program (FPLP) withholding for each payee in accordance with U.S. Department of Treasury requirements.
          </li>
          <li>
            Issue demand letters, conduct collection activities, and report on receivables.
          </li>
          <li>
            Process and apply receipts to Model overpayments and make adjustments as needed to refund excess collections received.
          </li>
          <li>
            Process referrals of delinquent Model debts to the U.S. Department of Treasury for collection in accordance with CMS debt management policy.
          </li>
          <li>
            Manage/monitor Extended Repayment Schedule (ERS) arrangements to provide hardship relief to eligible Model participants in accordance with CMS debt management policy.
          </li>
          <li>
            Manage a single bank account for all new and existing Models that make EFT payments, in accordance with the CMS demonstration payment schedule provided by CMMI and OFM.
          </li>
          <li>
            Send IRS Forms 1099-MISC annually for payments made to payees in accordance with the IRS threshold requirements.
          </li>
          <li>
            Send IRS Forms 1099-C annually to Model participants for the cancellation of CMMI model overpayments that were deemed uncollectible and approved for write-off and termination of collection by CMS management.
          </li>
          <li>
            Provide proper funds control, oversight, and compliance with all applicable laws, regulations, Federal Accounting Standards, Generally Accepted Accounting Principles, CMS Office of Financial Management (OFM) guidelines and reporting requirements, and CMS Internet Only Manual (IOM)/Medicare Financial Management Manual, Chapters 3-7.
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Innovation Support Platform 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Innovation Support Platform (ISP) is a contract with three integrated IT systems that support the participant interaction that occurs after model go-live. Work with BSG to determine what combination of Salesforce POST and ISP tools you need.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <span
          class="text-pre-wrap "
        >
          ISP supplies the capabilities below through: 
          <a
            class="usa-link"
            href="/help-and-knowledge/https://mint.cms.gov/help-and-knowledge/operational-solutions?solution=centralized-data-exchange&section=about"
          >
            Centralized Data Exchange (CDX)
          </a>
          , 
          <a
            class="usa-link"
            href="/help-and-knowledge/https://mint.cms.gov/help-and-knowledge/operational-solutions?solution=health-data-reporting&section=about"
          >
            Health Data Reporting (HDR)
          </a>
          , and 
          <a
            class="usa-link"
            href="/help-and-knowledge/https://mint.cms.gov/help-and-knowledge/operational-solutions?solution=expanded-data-feedback-reporting&section=about"
          >
            Expanded Data Feedback Reporting (eDFR)
          </a>
          . You can work with BSG to configure the specific capabilities you need for your model.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Access management
        </h4>
        <span
          class="text-pre-wrap "
        >
          Participants can reuse existing CMS user accounts or create a new one.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Configure model
        </h4>
        <span
          class="text-pre-wrap "
        >
          Setup the model in the system, including:
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Model year
          </li>
          <li>
            Performance periods
          </li>
          <li>
            Submission periods
          </li>
          <li>
            Pre-load participant information
          </li>
          <li>
            Pre-load beneficiary information
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Submission management
        </h4>
        <span
          class="text-pre-wrap "
        >
          Establish and manage timeframes for data submission.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Exchange data through Application Programming Interfaces (API)
        </h4>
        <span
          class="text-pre-wrap "
        >
          Engage in interoperable data exchanges, including:
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            API-based data exchange through industry or organization-specific standards. For example, CDX collected Patient Care Reports through an API with 
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://nemsis.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Emergency Management Services
            </a>
          </li>
          <li>
            Electronic Health Records integration (a Bulk FHIR API is coming soon)
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Collect and process health-related data.
        </h4>
        <span
          class="text-pre-wrap "
        >
          Collect data from participants through data entry on web pages, file uploads, or APIs, including:
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Expanded Demographics data that complies with United States Core Data for Interoperability (USCDI) standards.
          </li>
          <li>
            Social Determinants of Health (SDOH) data using the PRAPARE, North Carolina, or AHC tools.
          </li>
          <li>
            Quality Measures (i.e., numerators, denominators, exclusions, exceptions)
          </li>
          <li>
            Clinical Data
          </li>
          <li>
            Other model-defined metrics and qualitative data.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        />
        <span
          class="text-pre-wrap "
        >
          <a
            aria-label="Open in a new tab"
            class="usa-link usa-link--external"
            href="https://www.loom.com/share/ba9eec7f6a0b401a8a5ea102d9c433f1"
            rel="noopener noreferrer"
            target="_blank"
          >
            See a video sample.
          </a>
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Produce reports and files for participants. 
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <span>
              Participant feedback dashboards that supply curated reports to participants based on CMS data (
              <a
                aria-label="Open in a new tab"
                class="usa-link usa-link--external"
                href="https://cmsbox.app.box.com/s/8rody63c7w6x2skkrchit43a7q4e7fa1"
                rel="noopener noreferrer"
                target="_blank"
              >
                see a video sample
              </a>
              ). Dashboards use the Looker commercial tool and can include information such as:
            </span>
            <ul
              class="padding-left-4 margin-top-0"
            >
              <li
                class="list-item"
              >
                Multiple levels of reports (e.g., entity, practitioner, beneficiary)
              </li>
              <li
                class="list-item"
              >
                Utilization information
              </li>
              <li
                class="list-item"
              >
                Cost information
              </li>
              <li
                class="list-item"
              >
                Claims-based quality measures
              </li>
              <li
                class="list-item"
              >
                Model-specific metrics
              </li>
            </ul>
          </li>
          <li>
            Quality measure results - aggregate quality measure calculation results report
          </li>
          <li>
            Medicare FFS Claims and Part D raw data files.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Analytics
        </h4>
        <span
          class="text-pre-wrap "
        >
          Create analytics for model teams, including:
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Computations and algorithms such as probabilistic matching and attribution.
          </li>
          <li>
            Model Space (coming soon) – a workspace for model contractors, model teams, and BSG’s IT teams to create and share analytical tools using languages such as Python through Data Bricks.
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Integrated Data Repository 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Integrated Data Repository (IDR) is a multi-platform and high-volume data warehouse comprising integrated views of data across Medicare Parts A, B, C, and D, Beneficiary Entitlement, Enrollment and Utilization data. Provider reference information, Drug data, Contracts for Plans, and Medicaid and Children’s Health Insurance Program (CHIP).

The data in the IDR is leveraged by various components across the agency to facilitate investigative and litigious efforts focused on fighting Medicare and Medicaid fraud, waste and abuse. Users of the IDR leverage the robust suite of Enterprise BI tools made available to them to conduct in-depth analysis of risk adjustment policies, Medicare-Medicaid program comparisons, payment models, and prescription drug cost trends, among many other areas of importance.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Medical Trend & Utilization Analysis
          </li>
          <li>
            Healthcare Cost & Assessment
          </li>
          <li>
            Policy Analysis and Development
          </li>
          <li>
            Provider Profiling & Management
          </li>
          <li>
            Quality and Effectiveness: Pay for Performance
          </li>
          <li>
            Program Integrity and Fraud, Waste & Abuse
          </li>
          <li>
            Rapid response to legislative inquiries
          </li>
          <li>
            Data available for claims-based program operational needs
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            State of the art business intelligence, reporting, and additional data access capabilities
          </li>
          <li>
            Automated Finder File and Data Extract Process
          </li>
          <li>
            Data dictionary, data limitations information, source to target mappings, etc.
          </li>
          <li>
            Customer support and assistance
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Learning and Diffusion Group 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Learning and Diffusion Group (LDG) is a team within CMMI that facilitates learning within models and disseminates the lessons learned across models so that participants can benefit from the experiences of other models. LDG has two divisions: the Division of Model Learning Systems (DMLS) and the Division of Analysis and Networks (DAN).
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Services provided
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Learning systems
          </li>
          <li>
            Driver diagram development
          </li>
          <li>
            Educating beneficiaries
          </li>
          <li>
            Recruiting participants (advertising the model to stakeholders)
          </li>
          <li>
            Cross-participant sharing (using Connect, 4i, or other)
          </li>
          <li>
            Learning contractor (a cross-model contract or something else)
          </li>
          <li>
            Technical assistance
          </li>
          <li>
            Model-specific learning (for example, a focus on quality)
          </li>
          <li>
            Model-specific data collection efforts
          </li>
          <li>
            Model-specific care redesign/care reporting
          </li>
          <li>
            Dashboard development (piloting)
          </li>
          <li>
            Complete health equity analyses
          </li>
          <li>
            Model-specific learning cost estimate
          </li>
          <li>
            Have an LDG member as part of the team
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Legal Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The mission of the Legal Vertical is to facilitate an effective and coordinated working relationship between CMMI and Office of General Council (OGC), the legal counsel to CMMI, and to provide an internal resource on legal issues.

To achieve this mission, the Legal Vertical provides technical assistance and support to CMMI; drafts governing documents and cross-cutting regulations; promotes consistency in addressing cross-cutting legal issues; and helps to identify and mitigate potential legal risks to CMMI.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Services provided
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Manage CMMI’s overall relationship with OGC
          </li>
          <li>
            Draft Participation Agreements, Cooperative Agreements, State Agreements, addendums to Medicare Agreements, certain aspects of rulemaking, and upon request and subject to availability, other legal-related documents ​
          </li>
          <li>
            Provide technical assistance to model teams and groups for cross-cutting initiatives
          </li>
          <li>
            Develop recommendations to address cross-cutting legal issues
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Master Data Management 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Master Data Management (MDM) at CMS produces integrated and harmonized Beneficiary and Provider data from various Medicare and Medicaid systems. To create this master version, MDM uses identity resolution to recognize distinct entities (e.g., a provider, beneficiary, organization, or program) by matching similar records across multiple data sets. MDM provides flexible and easy access to provider and beneficiary data through extracts, web services, and APIs.

MDM is an authoritative System of Reference that integrates and stores data from CMS operational Systems of Record. MDM data is considered as authoritative as the data in the source System of Record from which it is obtained.

CMMI, in particular, uses MDM as a repository to store data to inform and resolve model overlaps (when necessary) for both aligned beneficiaries and participating providers among CMS payment models/demonstrations that are primarily shared savings-based models. This use of MDM for CMMI is a limited but critical role so that CMMI, CM, and Duals Office models have a single point of operational data ‘hub’ to resolve overlaps.

MDM is one of CMS’s Enterprise Shared Services (ESS) that provides authoritative data integrated and consolidated from various source systems. MDM helps address business challenges by linking data across multiple sources for various business needs. MDM provides:
      </p>
      <ul
        class="padding-left-4 margin-top-0"
      >
        <li
          class="list-item"
        >
          Trusted identity resolution capability for CMS’ expanding catalog of Master Data sources
        </li>
        <li
          class="list-item"
        >
          Integration and consolidation of Master Data from numerous disparate data sources to create a consolidated, authoritative view of each entity
        </li>
        <li
          class="list-item"
        >
          Flexible and easy access to Master Data (e.g., near real-time web services, extracts for batch processing, APIs, and analytic capabilities).
        </li>
        <li
          class="list-item"
        >
          A platform for improved data quality and understanding
        </li>
        <li
          class="list-item"
        >
          A record of non-claims-based payments
        </li>
      </ul>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Identity resolution of CMS enterprise data entities (providers, beneficiaries, enrollees, ACO model participation)
          </li>
          <li>
            Federation of identity resolved CMS enterprise data
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Measure and Instrument Development and Support 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        CMMI awarded a task order off of CCSQ’s Quality Measure Development and Analytic Support (QMDAS) contract and titled the task order the Measure Instrument Development and Support contract, or MIDS for short. MIDS is a quality measure contract that supports model teams’ development of de novo measures and re-specification of existing measures for use in CMMI’s Alternative Payment Models (APMs). The MIDS contract is used to support measuring and incentivizing quality in the Center’s healthcare delivery models, assisting models in their quality strategy and design of measures.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          The objectives of the MIDS contract are to:
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Develop de novo quality measures and re-specify existing quality measures to support measuring and incentivizing quality in the Center’s portfolio of APMs,
          </li>
          <li>
            Support measures through the full Measure Lifecycle including endorsement, rulemaking as needed, reevaluation, and implementation, and
          </li>
          <li>
            Provide ad hoc analysis support or reports to assist the Center and its models in the design of their quality strategy during new model development or when the model desires to revise a measure used in its current quality portfolio.
          </li>
        </ul>
      </div>
      <span>
        MIDS also includes work to reevaluate measures, support measure implementation through collaboration with implementation contractors, pursue National Quality Forum (NQF) endorsement, and, as needed, provide rulemaking language for proposed measure uses.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Medicare Advantage Prescription Drug System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Medicare Advantage (MA) & Prescription Drug (Part D) system maintains enrollment, payment, and premium data for Medicare beneficiary enrollments in Medicare Part C and D Plans. The Medicare Advantage (MA) & Prescription Drug (Part D) systems provide services to beneficiaries, Plans, and CMS.

Transaction Processing Plans submit batch files that contain enrollment, disenrollment, and various status update transactions to MARx. Using CMS business rules, MARx validates the transactions and accepts or rejects the submitted enrollments, disenrollment, or changes. Daily response files report the results of all transactions back to the plans. Other Medicare Modernization Act (MMA) systems also interact with MARx. Notifications from other systems, such as the Medicare Beneficiary Database (MBD), which report changes in beneficiary demographics, entitlement, health status, low-income subsidy status, etc. may affect beneficiary enrollment and payment to the Plans.

Payment Processing MARx calculates monthly Medicare payments for each Plan and generates payment adjustments when changes in membership and/or beneficiary health status occur. Monthly reports detail enrollment and payment information for the plans and CMS. Premium Processing MARx receives and processes transactions impacting Part C and Part D premiums, Medicare Part B Reduction, and Medicare Part C/D Plan enrollment status. Beneficiaries may elect to have their premiums withheld from their Social Security Administration (SSA) or Railroad Retirement Board (RRB) checks. MARx is responsible for interfacing with SSA or RRB to establish or terminate withholding and tracks expected withholding amounts. Once the withholding agency completes processing each transaction, a response is sent back to MARx informing CMS of the withholding agency's acceptance or rejection of each of the individual premium withholding requests, cancellations, statuses, and amounts. The withholding agency's acceptance or rejection of the transactions is communicated to the Plans. The Premium Withhold Accounting functionality was implemented to reconcile the withheld premium amounts. Based on reconciliation of the expected and actual premium amounts, the premium dollars to be included in a plan's payment are determined. 
      </p>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          User Interface
        </h4>
        <span
          class="text-pre-wrap "
        >
          The MARx application includes online processing capabilities. The MARx User Interface (UI) provides Plans and CMS the ability to view and update beneficiary, enrollment, payment, and premium information.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Responsible for the enrollment of beneficiaries into Medicare Advantage and Part D plans
          </li>
          <li>
            Calculates monthly premiums for Part D plans, Medicare Advantage plan providers and Part D plan providers
          </li>
          <li>
            Generates the payment file used to pay plan providers
          </li>
          <li>
            Provides withholding information to SSA so that monthly premiums are deducted from a beneficiaries SSA check
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Outlook Mailbox 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Set up an email address through Outlook Mailbox, so all your model communications will funnel into a single place.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Quality Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Quality Vertical is responsible for developing and implementing the Center’s overall quality strategy and disseminating that information vertically. They do this by working with model teams as they develop and implement their model quality strategies.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Services provided
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Guidance in quality measure selection and recommendations for usage
          </li>
          <li>
            Assistance in developing a new quality measure
          </li>
          <li>
            Technical assistance to model teams
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Additional resources
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://share.cms.gov/center/cmmi/QualVert/ModelResources/Forms/AllItems.aspx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Quality Vertical Model Resources on SharePoint
            </a>
          </li>
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://mmshub.cms.gov/mms-tools"
              rel="noopener noreferrer"
              target="_blank"
            >
              Measure Management System (MMS) Tools
            </a>
          </li>
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://qpp.cms.gov/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Quality Payment Program
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Research, Measurement, Assessment, Design, and Analysis 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Research, Measurement, Assessment, Design, and Analysis (RMADA) Indefinite Delivery Indefinite Quantity 2 (IDIQ) umbrella contract, the Centers for Medicare & Medicaid Services (CMS) shall award task orders (TOs) for a wide range of analytic support and technical assistance activities that support models and demonstration programs created or derived under the auspices of the Patient Protection & Affordable Care Act (ACA), the Medicare Access and CHIP Reauthorization Act (MACRA), other non-ACA statutes, and future health reform legislation. Supporting all aspects of model design and operations (with the exception of information technology);
      </p>
      <ul
        class="padding-left-4 margin-top-0"
      >
        <li
          class="list-item"
        >
          Conducting program, data and environmental analyses
        </li>
        <li
          class="list-item"
        >
          Assisting with application development and review
        </li>
        <li
          class="list-item"
        >
          Monitoring model site implementations
        </li>
        <li
          class="list-item"
        >
          Designing and carrying out surveys and other primary data collection activities
        </li>
        <li
          class="list-item"
        >
          Obtaining and analyzing secondary data sources including data regarding Medicare, Medicaid, and the Children’s Health Insurance Program (CHIP) and data from private payer sources needed to support model design, operations and evaluations
        </li>
        <li
          class="list-item"
        >
          Reporting on formative and summative analyses
        </li>
        <li
          class="list-item"
        >
          Providing rapid cycle evaluation feedback to CMS and/or model participants
        </li>
        <li
          class="list-item"
        >
          Creating summative reports of annual and final program findings
        </li>
        <li
          class="list-item"
        >
          Assist in the development of program templates, tools, toolkits, and driver diagrams
        </li>
        <li
          class="list-item"
        >
          Support stakeholder engagement and training
        </li>
        <li
          class="list-item"
        >
          Provide data analysis/ integration support
        </li>
        <li
          class="list-item"
        >
          Assist in the development of program specific technical/policy resource guides and informational/ educational/ briefing materials
        </li>
        <li
          class="list-item"
        >
          Provide grant proposal reviews and summarization reports
        </li>
        <li
          class="list-item"
        >
          In addition to the aforementioned list of required tasks, the Contractor may be asked to work with CMS on matters pertaining to developing and implementing learning systems to support accelerated learning, improvement, and dissemination of promising practices.
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Salesforce Application Review and Scoring 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Salesforce Application Review and Scoring (ARS) allows model teams to track a panel’s review and scoring of the submitted applications to a participation agreement model.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <strong>
              Scoring Rubric
            </strong>
             - Establish a framework to score applications and set up the panel members.
          </li>
          <li>
            <strong>
              Application Scoring
            </strong>
             - Score applications and track the input from each panel member.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        />
        <ul
          class="padding-left-4"
        >
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=1z1jWuUk4xLgW4NY0UjbYW9gO_9IjI7BW"
              rel="noopener noreferrer"
              target="_blank"
            >
              View an ARS screenshot
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Salesforce CONNECT 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        Salesforce CONNECT creates a social media-like environment to facilitate participant-to-participant and CMS-to-participant collaboration. 
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <strong>
              Group management
            </strong>
             - Define collaboration groups that can include participants, contractors, and CMS staff.
          </li>
          <li>
            <strong>
              Engage
            </strong>
             - Members of a Group can interact through chat, Q&A, and information sharing.
          </li>
          <li>
            <strong>
              Learn
            </strong>
             - Follow topics and search for information. Share and organize relevant materials.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Samples
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=16cg308CI-PnbbWOaDanXlHmpzKPqQWdc"
              rel="noopener noreferrer"
              target="_blank"
            >
              View sample 1
            </a>
          </li>
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=1ArGZsXTeFrsLA67uRN3Jyr4U6UwG1sVR"
              rel="noopener noreferrer"
              target="_blank"
            >
              View sample 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Salesforce Letter of Intent 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Salesforce Letter of Intent (LOI) is a website that allows model teams to collect information to gauge the level of industry interest in a participation agreement model.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Functions
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Portal registration
          </li>
          <li>
            User access management
          </li>
          <li>
            Model application management
          </li>
          <li>
            Organization management
          </li>
          <li>
            Contact management
          </li>
          <li>
            Practitioner submission & tracking
          </li>
          <li>
            Submission Period management
          </li>
          <li>
            Case management
          </li>
          <li>
            File submission / approval
          </li>
          <li>
            Mass file download
          </li>
          <li>
            File tracker / dashboard
          </li>
          <li>
            Annual / quarterly deliverable management
          </li>
          <li>
            Attestation management
          </li>
          <li>
            Corrective action planning
          </li>
          <li>
            Events, tasks, email / templates
          </li>
          <li>
            Reports
          </li>
          <li>
            Dashboards
          </li>
          <li>
            Single Sign On (OKTA) w/ MFA
          </li>
          <li>
            RIDP (Remote Identity Proofing)
          </li>
          <li>
            Anti-virus file scanning
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Securely communicate with model organizations during the model solicitation lifecycle (identifying interest, applying to participant, manage participation/compliance)
          </li>
          <li>
            Enable the collection of information and the exchange of documents
          </li>
          <li>
            Track/monitor model participant deliverable submission and compliance
          </li>
          <li>
            Enter/escalate questions/issues to support contractors
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Salesforce Project Officer Support Tool / Portal 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Project Officer Support Tool helps model teams manage participants after model go-live. Work with BSG to determine what combination of Salesforce POST and ISP tools you need.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <span
          class="text-pre-wrap "
        >
          The capabilities for POST vary between models. The following capabilities are common across models. The project team will create the capabilities that your model requires.
        </span>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <strong>
              Access management
            </strong>
             - Participants can reuse existing CMS user accounts or create a new one.
          </li>
          <li>
            <strong>
              Applications
            </strong>
             - Applications – View and edit applications submitted through the RFA.
          </li>
          <li>
            <strong>
              Sign Participant Agreements
            </strong>
             - (coming soon) – Electronically sign Participant Agreements after reviewing applications and selecting participants.
          </li>
          <li>
            <strong>
              Participant Profile
            </strong>
             - Participant Profile – Create and manage profiles of your participants and awardees, including contact information and organization characteristics.
          </li>
          <li>
            <strong>
              Participant Documents
            </strong>
             - Participant Documents – Collect, approve, and manage documents with your participants (e.g., agreements, attestations, progress reports, status reports, and marketing materials).
          </li>
          <li>
            <strong>
              Submission Management
            </strong>
             - Submission Management – Establish and manage timeframes for data submission.
          </li>
          <li>
            <span>
              <strong>
                Participant Engagement
              </strong>
               - Engage with your participants with features such as:
            </span>
            <ul
              class="padding-left-4 margin-top-0"
            >
              <li
                class="list-item"
              >
                Post announcements, FAQs, and other information
              </li>
              <li
                class="list-item"
              >
                Engage in chats, surveys, and polls
              </li>
              <li
                class="list-item"
              >
                Manage events, tasks, and email templates
              </li>
              <li
                class="list-item"
              >
                Manage Corrective Action Plans
              </li>
            </ul>
          </li>
          <li>
            <strong>
              Case Management
            </strong>
             - Case Management – Manage requests, tickets, and questions from participants.
          </li>
          <li>
            <strong>
              Reports and Dashboards
            </strong>
             - Reports and Dashboards – Produce standard and ad-hoc reports based on the data in the system.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Samples
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=1cFGP0eisdER8wZ7mFwR6ctwV09wWu11G"
              rel="noopener noreferrer"
              target="_blank"
            >
              View sample 1
            </a>
          </li>
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=1AXJ29X1Lo21EfDcqrCsHv0q2XVvO9ZzE"
              rel="noopener noreferrer"
              target="_blank"
            >
              View sample 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Salesforce Request for Application 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Salesforce Request for Application (RFA) allows model teams to collect applications from organizations that want to participate in a participation agreement model.
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Product capabilities
        </h3>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            <strong>
              Access management
            </strong>
             - Access management – Candidate participants can reuse existing CMS user accounts or create a new one.
          </li>
          <li>
            <span>
              <strong>
                Data collection
              </strong>
               - Collect the data you need to review and select participants such as:
            </span>
            <ul
              class="padding-left-4 margin-top-0"
            >
              <li
                class="list-item"
              >
                Organization information
              </li>
              <li
                class="list-item"
              >
                Contact information
              </li>
              <li
                class="list-item"
              >
                Provider network
              </li>
            </ul>
            <p
              class="margin-y-0"
            >
              You can customize the data collection during the development process.
            </p>
          </li>
          <li>
            <strong>
              Conditional logic
            </strong>
             - Build logic into the questions you ask applicants (e.g., present new questions based on answers to prior questions)
          </li>
          <li>
            <strong>
              Documents
            </strong>
             - Collect supporting documents from the candidate participants.
          </li>
          <li>
            <strong>
              Vet Providers
            </strong>
             - (coming soon) – Determine if Medicare FFS providers are valid by checking against data from the Center for Program Integrity (CPI), such as PECOS.
          </li>
          <li>
            <strong>
              Track
            </strong>
             - submissions
          </li>
          <li>
            <strong>
              Sign Participant Agreements
            </strong>
             - (coming soon) – Electronically sign Participant Agreements after reviewing applications and selecting participants.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        />
        <ul
          class="padding-left-4"
        >
          <li>
            <a
              aria-label="Open in a new tab"
              class="usa-link usa-link--external"
              href="https://drive.google.com/uc?export=view&id=1xijatfSN4cv8cYAT29oKZcv1jo15RDcl"
              rel="noopener noreferrer"
              target="_blank"
            >
              View an RFA screenshot
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions About Components matches the snapshot: Shared Systems 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      About this solution
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md"
    >
      <p
        class="margin-top-0 text-pre-wrap margin-bottom-0"
      >
        The Shared Systems are a group of systems used to process traditional Medicare Fee-for-Service (FFS) claims for Part A, Part B, and Durable Medical Equipment (DME).

Beneficiaries visit a provider of Medicare services, and that provider files a claim with their Medicare Administrative Contractor (MAC). The MAC processes and pays the claim, and sends a remittance to advise the provider and a Medicare Summary Notice (MSN) to the beneficiary. There are many Centers and Offices that receive the Medicare legislation that determines policies; those become change requests implemented through quarterly releases by the Shared System Maintainers (SSM) and the MACs.

The following systems are a part of Shared Systems:
      </p>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Fiscal Intermediary Shared System (FISS)
        </h3>
        <span
          class="text-pre-wrap "
        >
          The FISS is the shared system that processes Medicare Part A claims, including outpatient claims submitted under Part B. It interfaces directly with the Common Working File (CWF) system for verification, validation, and payment authorization. Claims are entered, corrected, adjusted, or canceled. Inquiries for claims statuses, additional development requests or eligibility, and various codes are processed.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Functions
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            Adjudication of Part A and Part B institutional claims
          </li>
          <li>
            FISS is a mainframe system Medicare Part A contractors use to process Medicare Part A and Part B institutional claims nationwide.
          </li>
          <li>
            Inquiries for claims statuses, additional development requests or eligibility, and various codes are processed.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          Multi-Carrier System (MCS)
        </h3>
        <span
          class="text-pre-wrap "
        >
          MCS is a mainframe system that Medicare Part B carriers use to process Medicare Part B Claims nationwide. It processes claims for physician care, DME, and other outpatient services. Like its Part A counterpart, claims are entered, corrected, adjusted, or canceled. Inquiries for claims statuses, additional development requests or eligibility, and various codes are processed.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Functions
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            The MCS is the shared system that processes Medicare Part B claims for physician care and other outpatient services nationwide.
          </li>
          <li>
            It interfaces directly with the CWF.
          </li>
          <li>
            It meets CMS core requirements for processing Medicare Part B claims, including data collection and validation, claims control, pricing, adjudication, correspondence, online inquiry, file maintenance, reimbursement, and financial processing.
          </li>
        </ul>
      </div>
      <div
        class="margin-top-4"
      >
        <h3
          class="margin-bottom-2"
        >
          ViPS Medicare Shared System (VMS)
        </h3>
        <span
          class="text-pre-wrap "
        >
          VMS is the standard FFS system that processes Durable Medical Equipment Prosthetics, Orthotics, and Supplies (DMEPOS) claims for claim adjudication and payment. Inquiries for claims statuses, additional development requests or eligibility, and various codes are processed.
        </span>
        <ul
          class="padding-left-4"
        />
      </div>
      <div
        class="margin-top-4"
      >
        <h4
          class="margin-bottom-2 margin-bottom-0 font-body-md"
        >
          Functions
        </h4>
        <ul
          class="padding-left-4 margin-top-0"
        >
          <li>
            GDIT maintains the VMS software that processes DME claims through adjudication and payment and for Medical Review.
          </li>
          <li>
            The VMS claims processing system is the shared system that processes claims for physician and other practitioner services, prior authorization, diagnostic tests, ambulance services, DMEPOS, and other services/supplies not covered by Part A. It interfaces directly with the CWF for verification, validation, and payment authorization.
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
